# roimcr

./: .pre-commit-config.yaml  Cargo.toml
python/: Cargo.toml  pyproject.toml
python/pyroimcr/: __init__.py  pyroimcr.pyi  simplisma.py  transformers.py  utils.py
python/src/: lib.rs
python/tests/: test.py
roimcr/src/: enums.rs  file.rs  lib.rs  structs.rs
src/: lib.rs  main.rs  utils.rs
