[package]
name = "roimcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.23", features = [ "serialize" ] }
serde = {version ="1.0.140", features = [ "derive" ] }
base64 = "0.13.0"
ndarray = "0.15.4"
netcdf = { version = "0.7.0", features = ["ndarray"] }
ndarray-csv = "0.5.1"
csv = "1.1.6"