[package]
name = "pyroimcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyroimcr"
crate-type = ["cdylib"]

[dependencies]
datetime = "0.5.2"
numpy = "0.16.2"
pyo3 = { version = "0.16.5", features = ["extension-module", "abi3-py38"] }
roimcr = { path = ".." }
